# NEPLg2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  introduce.n.md  note.md  parser_ref.rs  plan.md  repo_metrics.py  script.py  stdlib_restructure_plan.md  stdlib_restructure_plan_v2.md  todo.md  todo_kp.md  typecheck_ref.rs
.cargo/: config.toml
.github/workflows/: gh-pages.yml  (+7 more)
doc/: cli.md  error.md  llvm_ir_setup.md  runtime.md  starting_detail_neplg1.md  test_cases_neplg1.md  testing.md  web_playground.md
examples/: counter.nepl  counter2.nepl  fib.nepl  helloworld.nepl  io_pipeline.nepl  kp_fizzbuzz.nepl  nm.nepl  rpn.nepl  stdio.nepl
nepl-cli/: Cargo.toml  build.rs
nepl-core/: Cargo.toml
nepl-web/: Cargo.toml  build.rs
nepl-web-playground/: Cargo.toml
nodesrc/: analyze_tests_json.js  cli.js  compiler_loader.js  convert_stdlib_tests.js  html_gen.js  html_gen_playground.js  parser.js  run_test.js  tests.js  util_paths.js
scripts/: fetch_editorsample.sh
stdlib/: std.nepl  string.nepl  vec.nepl
tests/: block_semicolon_return.n.md  capacity_stack.n.md  debug_loader.n.md  functions.n.md  keywords_reserved.n.md  kp.n.md  kp_i64.n.md  llvm_target.n.md  neplg2.n.md  nm.n.md  offside_and_indent_errors.n.md  part.nepl  proptest.n.md  resolve.n.md  ret_f64_example.n.md  selfhost_req.n.md  shadowing.n.md  sizeof.n.md  sort.n.md  stdin.n.md  stdout.n.md  string.n.md  tuple_new_syntax.n.md  tuple_old_syntax.n.md
web/: coi-serviceworker.js  index.html  main.js  package-lock.json  package.json  styles.css  testinfo.html  tests.html  tsconfig.json
(+220 files in other folders)
